feat(security): Added security feature using JWT Authentication/Authorization
    - Update OpenAPI specs to reflect the security updates.
- Add AuthController to provide /auth/login endpoint
    - Use JWT tokens to register user session
    - Add UserController to allow admin to add, remove, authorize, and update users
    - Provide role-based access security to endpoints
    - Modify the auditing aspect to register the username performing the action
